--- a/nORM/nORM.csproj
+++ b/nORM/nORM.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MySqlConnector" Version="2.4.0" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
     </ItemGroup>
 
